--- a/manuscript/SEM_output.qmd
+++ b/manuscript/SEM_output.qmd
@@ -40,25 +40,11 @@ div <- biomass_div |>
 
 ```
 
-Standing biomass was twice as high at the sub-alpine (`r bio$mean[2]` ± `r bio$se[2]` g m^-2^) compared to the alpine site (`r bio$mean[1]` ± `r bio$se[1]` g m^-2^), and was affected by all three global change drivers, warming, nitrogen addition and cutting (@fig-1-biomass-diversity a).
-Warming and nitrogen addition increased standing biomass significantly at both sites, while lipping reduces standing biomass but more so with warming (WxC interaction).
-Shannon diversity was 1.5 times higher at the alpine (`r div$mean[1]` ± `r div$se[1]`) compared to the sub-alpine site (`r div$mean[2]` ± `r div$se[2]`) and was only affected by nitrogen addition.
-Diversity decreased with increasing nitrogen at both sites, in particular at nitrogen levels above 25 kg N ha^-1^ y^-1^ (@fig-1-biomass-diversity c). 
+Standing biomass was twice as high at the sub-alpine (`r bio$mean[2]` ± `r bio$se[2]` g m^-2^) compared to the alpine site (`r bio$mean[1]` ± `r bio$se[1]` g m^-2^), and was affected by all three global change drivers, warming, nitrogen addition and cutting (@fig-1-biomass-diversity a). Warming and nitrogen addition increased standing biomass significantly at both sites, while lipping reduces standing biomass but more so with warming (WxC interaction). Shannon diversity was 1.5 times higher at the alpine (`r div$mean[1]` ± `r div$se[1]`) compared to the sub-alpine site (`r div$mean[2]` ± `r div$se[2]`) and was only affected by nitrogen addition. Diversity decreased with increasing nitrogen at both sites, in particular at nitrogen levels above 25 kg N ha^-1^ y^-1^ (@fig-1-biomass-diversity c).
 
-To understand if these global change drivers affect Shannon diversity through standing biomass, we tested the relationship between standing biomass and diversity.
-Overall, their relationship was negative (F<sub>1, 142</sub> = 53.88, *P* ≤ 0.001), but it differed between the two sites and under ambinet and warm conditions (@fig-bio-div).
-In the alpine site, diversity decreases with increasing biomass under warming, but not under ambient temperature.
-Contrary, in the sub-alpine site, there was a negative relationship between standing biomass and diveresity under ambient conditions, however not with warming.
-This suggests that the these drivers affect diversity through biomass only under specific conditions and that also depends on the site.
+To understand if these global change drivers affect Shannon diversity through standing biomass, we tested the relationship between standing biomass and diversity. Overall, their relationship was negative (F<sub>1, 142</sub> = 53.88, *P* ≤ 0.001), but it differed between the two sites and under ambinet and warm conditions (@fig-bio-div). In the alpine site, diversity decreases with increasing biomass under warming, but not under ambient temperature. Contrary, in the sub-alpine site, there was a negative relationship between standing biomass and diveresity under ambient conditions, however not with warming. This suggests that the these drivers affect diversity through biomass only under specific conditions and that also depends on the site.
 
-When checking the effect of the three global change drivers separately for each sites, we found that standing biomass was co-limited by warming and nitrogen addition at the alpine site, with an additive effect for the interaction of the two drivers (WxN interaction; @fig-1-biomass-diversity b).
-There were also interactive effects, where clipping decreased standing biomass more with warming (WxC interaction) and with nitrogen addition (NxC interaction).
-Standing biomass increased with warming and nitrogen addition, and decreased with clipping at the sub-alpine site, but we found no interactive effects.
-In the alpine site, warming and nitrogen addition increased Shannon diversity when little nitrogen was added, but decreased diversity at nitrogen levels above 25 kg N ha^-1^ y^-1^ (@fig-1-biomass-diversity d).
-In addition, clipping could mitigate the negative effects of warming and nitrogen addition on diversity at the higher levels of nitrogen addition (WxNxC interaction).
-At the sub-alpine site, warming had a negative effect on the diversity irrespective of the nitrogen levels, while nitrogen addition decrease diversity.
-There was no effect of clipping or interactive effects of the driveres at the sub-alpine site.
-
+When checking the effect of the three global change drivers separately for each sites, we found that standing biomass was co-limited by warming and nitrogen addition at the alpine site, with an additive effect for the interaction of the two drivers (WxN interaction; @fig-1-biomass-diversity b). There were also interactive effects, where clipping decreased standing biomass more with warming (WxC interaction) and with nitrogen addition (NxC interaction). Standing biomass increased with warming and nitrogen addition, and decreased with clipping at the sub-alpine site, but we found no interactive effects. In the alpine site, warming and nitrogen addition increased Shannon diversity when little nitrogen was added, but decreased diversity at nitrogen levels above 25 kg N ha^-1^ y^-1^ (@fig-1-biomass-diversity d). In addition, clipping could mitigate the negative effects of warming and nitrogen addition on diversity at the higher levels of nitrogen addition (WxNxC interaction). At the sub-alpine site, warming had a negative effect on the diversity irrespective of the nitrogen levels, while nitrogen addition decrease diversity. There was no effect of clipping or interactive effects of the driveres at the sub-alpine site.
 
 ```{r}
 #| label: fig-1-biomass-diversity
@@ -72,7 +58,6 @@ There was no effect of clipping or interactive effects of the driveres at the su
 tar_read(bio_div_figure, store = here::here(tar_config_get("store")))
 
 ```
-
 
 ```{r}
 #| label: fig-bio-div
@@ -115,16 +100,11 @@ tidy(standingB_div_final_model) |>
 
 ```
 
-
 ### Do global change drivers operate through the same mechanisms on diversity?
 
 *This should maybe be in the method?*
 
-To test if the three global change drivers affect Shannon diversity through the same mechanisms, i.e. standing biomass, we compared the AIC value of different models.
-A main effects model only, main effects and interactions and main effects and standing biomass.
-We found that at the alpine site, adding standing biomass or the interactions between the drivers improved the model both by ca. 2.5 AIC units (@tbl-var-explained).
-This did however not improve the model at the sub-alpine site.
-This suggests that using only main effects and standing biomass for the further analsyis can be justified.
+To test if the three global change drivers affect Shannon diversity through the same mechanisms, i.e. standing biomass, we compared the AIC value of different models. A main effects model only, main effects and interactions and main effects and standing biomass. We found that at the alpine site, adding standing biomass or the interactions between the drivers improved the model both by ca. 2.5 AIC units (@tbl-var-explained). This did however not improve the model at the sub-alpine site. This suggests that using only main effects and standing biomass for the further analsyis can be justified.
 
 ```{r}
 #| label: tbl-var-explained
@@ -181,12 +161,7 @@ site |>
 
 ```
 
-We expected warming, nitrogen addition and clipping to operate through the same mechanisms, namely standing biomass to affect Shannon diversity (H1).
-Warming and nitrogen addition had the expected positive effect on standing biomass, while clipping had a negative effect (@fig-cut-final-diversity a and b).
-The three global change drivers operated on diversity through standing biomass only at the alpine site and increased standing biomass resulted in a negative net effect on diversity.
-Interestingly, warming also had a direct positive effect on diversity.
-Contrary, at the sub-alpine site, the three global change drivers had the same effect on standing biomass, but did not indirectly affect diversity.
-However, warming and nitrogen addition had a direct negative effect on diversity.
+We expected warming, nitrogen addition and clipping to operate through the same mechanisms, namely standing biomass to affect Shannon diversity (H1). Warming and nitrogen addition had the expected positive effect on standing biomass, while clipping had a negative effect (@fig-cut-final-diversity a and b). The three global change drivers operated on diversity through standing biomass only at the alpine site and increased standing biomass resulted in a negative net effect on diversity. Interestingly, warming also had a direct positive effect on diversity. Contrary, at the sub-alpine site, the three global change drivers had the same effect on standing biomass, but did not indirectly affect diversity. However, warming and nitrogen addition had a direct negative effect on diversity.
 
 **Cutting - final standing biomass and diversity**
 
@@ -204,18 +179,11 @@ cut_final_diversity[[1]]
 
 ```
 
-Because standing biomass affected diversity differently between the two sites and the warming treatment (@fig-bio-div), we also ran the SEMs separately for ambient and warm conditions.
-At the alpine site, the drivers only operated through standing biomass under warming (@fig-cut-final-diversity-AW a and b).
-At the sub-alpine site, the drivers did not affect diversity through standing biomass under any of the warming treatments.
-Nitrogen addition had a direct effect on diversity under warming.
+Because standing biomass affected diversity differently between the two sites and the warming treatment (@fig-bio-div), we also ran the SEMs separately for ambient and warm conditions. At the alpine site, the drivers only operated through standing biomass under warming (@fig-cut-final-diversity-AW a and b). At the sub-alpine site, the drivers did not affect diversity through standing biomass under any of the warming treatments. Nitrogen addition had a direct effect on diversity under warming.
 
-The patterns are the same for species richness and evenness, with some exceptions at the sub-alpine site.
-Nitrogen addition has only a negative direct trend on species richness.
-Warming does not affect evenness directly in the sub-alpine site, but cutting has a direct negative effect on evenness.
+The patterns are the same for species richness and evenness, with some exceptions at the sub-alpine site. Nitrogen addition has only a negative direct trend on species richness. Warming does not affect evenness directly in the sub-alpine site, but cutting has a direct negative effect on evenness.
 
 Grazing shows similar patterns as clipping, but the three drivers do not affect any diversity index indirectly via biomass (although the effect size is large). In addition, warming does not affec biomass at the sub-alpine site.
-
-
 
 ```{r}
 #| label: fig-cut-final-diversity-AW
@@ -231,19 +199,13 @@ cut_final_diversity_AW[[1]]
 
 ```
 
-### Dive into the mechanisms: who is winning and losing?
+### Traits of winners and losers in response to global change
 
-**Question:** Do winners and losers have different traits?
+There were more winners (i.e. species that colonized or increased in cover) and losers (i.e. species that go extinct or decrease in cover) in response to warming, nitrogen addition or both in the alpine than the sub-alpine site @fig-traits a) and b)). In the alpine site, species that went extinct in response to warming were shorter and had lower temperature requirements (@fig-traits a)). Contrary, species that increased in cover or colonized plots with warming were taller and warm adapted species. At the sub-alpine site, species that increased in cover in response to warming were taller (no other traits significant...).
 
-At the alpine site, with warming cold and dry demanding species are lost. With nitrogen addition, cold demanding species are lost. With warming and nitrogen addition, species that require light and nutrient poor conditions are lost.
+With increasing nitrogen addition at the alpine site, taller species increased in cover and cold adapted species went extinct (@fig-traits b)). In the sub-alpine site, cold adapted species decreased in cover.
 
-With warming, taller, less light, and nutrient demanding species are increasing in cover. Similarly, with nitrogen addition, taller and less light sensitive \$\$species are increasing in cover. With warming and nutrient addition, temperature demanding species are increasing in cover. With increasing temperature taller and temperature demanding species win. With increasing nitrogen, taller plants win, but when the vegetation is cut, this trend is stronger at lower nitrogen levels and smaller at higher nitrogen levels.
-
-At the sub-alpine site with nitrogen addition moisture demanding species lose. With warming and nitrogen addition, cold demanding species lose. With nitrogen addition, taller, colder (?), and nutrient poor species decrease in cover. With warming, taller species increase in cover.
-
-Sub-alpine: When the vegetation is cut, shorter species are lost. With warming and cutting, taller species are lost. With nitrogen addition, taller species increase in cover and more so with cutting in particular at high nitrogen levels. With warming and cutting, light demanding species increase in cover.
-
-WxNxC: with warming and nitrogen drier species increase in cover, but with cutting less so?
+At the alpine site in response to warming and nitrogen addition, species that went extinct were more light sensitive. At the sub-alpine site in response to warming and nitrogen addition, species that increased in cover were tall and more so with increasing nitrogen addition. And species that went extinct were cold adapted, but less so with warming.
 
 ```{r}
 #| label: fig-traits
@@ -252,8 +214,8 @@ WxNxC: with warming and nitrogen drier species increase in cover, but with cutti
 #| warning: false
 #| fig-width: 10
 #| fig-height: 10
-#| fig-cap: v
+#| fig-cap: Plant height and Ellenberg light and temperature indicator values. a) Mean plant height and temperature values are shown for plant species going extinct, increasing in cover, and colonizing under ambient (grey) and warm (pink) conditions in the alpine and sub-alpine site. b) Mean plant height, light, and temperature values are shown for plant species going extinct, decrease, or increase in cover in the alpine and sub-alpine site. The points show the raw data, and the lines show the prediction lines from the models where either there was a significant relashionship for nitrogen addition (one grey line) or for warming x nitrogen (grey and pink lines). The linetype indicates the status of the species (solid = extinction,dotted = decreasing, dashed = increasing) and the color shows the warming treatment.
 
-tar_read(traits_figure, store = here::here(tar_config_get("store")))
+tar_read(small_traits_figure, store = here::here(tar_config_get("store")))
 
 ```
